--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -264,8 +264,8 @@
             </div>
             
             <div class="form-group">
-              <label for="download-url">URL de Download (auto-preenchido após upload)</label>
-              <input type="url" id="download-url" placeholder="https://..." readonly>
+              <label for="download-url">URL de Download (Preenchido auto após upload ou manual)</label>
+              <input type="url" id="download-url" placeholder="https://..." required>
             </div>
             
             <button type="submit" class="btn-primary">
