Forca redeploy para remover readonly

--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -265,7 +265,7 @@
             
             <div class="form-group">
               <label for="download-url">URL de Download (Preenchido auto após upload ou manual)</label>
-              <input type="url" id="download-url" placeholder="https://..." required>
+              <input type="url" id="download-url" placeholder="https://..." required> <!-- Campo editável -->
             </div>
             
             <button type="submit" class="btn-primary">
